# libdict

./: CMakeLists.txt
